# cacvote

./: .gitignore  Aptfile  Cargo.toml  Procfile  README.md  RustConfig  app.json  mprocs-cacvote-jx-terminal.yaml  mprocs-cacvote-mark.yaml  mprocs-cacvote-server.yaml  mprocs-release.yaml  mprocs-usability-test.yaml  mprocs.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vxsuite.code-workspace
apps/cacvote-mark/nprint/: Cargo.toml
apps/cacvote-mark/nprint/src/: lib.rs  main.rs  nprint.rs
apps/cacvote-scan/frontend/: Cargo.toml  Dioxus.toml  package.json  tailwind.config.js
apps/cacvote-scan/frontend/script/: build
apps/cacvote-scan/frontend/src/: main.rs
apps/cacvote-server/backend/: .env  Cargo.toml  Makefile
apps/cacvote-server/backend/script/: build  ci  lint
apps/cacvote-server/backend/src/: app.rs  bulletin_board.rs  client.rs  config.rs  db.rs  lib.rs  log.rs  session.rs  state.rs
apps/central-scan/backend/: Cargo.toml  Rocket.toml  package.json
apps/central-scan/backend/script/: db-setup.sh
apps/central-scan/backend/src/: cards.rs  db.rs  env.rs  main.rs  routes.rs  sync.rs
apps/central-scan/backend/static/: index.html  output.css
apps/rave-jx-terminal/backend/: .env  Cargo.toml  Rocket.toml  package.json
apps/rave-jx-terminal/backend/.sqlx/: query-17be83249f634be8bd73445f7f7860d35e10c7964256492604cd3beb21fa00a4.json  query-251cd0c2c4af6a1a75f1960c48e5fca2b6c88cd47fe5053eb67f1193b8775859.json  query-277f42342d8553dca3dbb0f3bfb118734c6cace06acd1e0adc2487d6418b97cb.json  query-3c3386a91882bc4440873ee682889d88a8224fa5ff6b35599125992a72dd6759.json  query-3e0f0f4dd62f3a1ae66d9296ac1abe9960a3a5a29efd10efd7e823c81d8f4e12.json  (+28 more)
apps/rave-jx-terminal/backend/examples/: pcsc.rs  (+3 more)
apps/rave-jx-terminal/frontend/: Cargo.toml  Dioxus.toml  package.json
apps/rave-scan/backend/: .env  Cargo.toml  Rocket.toml  package.json
libs/auth-rs/: Cargo.toml  package.json
libs/auth-rs/examples/: check_pin.rs  pcsc_monitor.rs  read_card_status.rs  sign_with_card.rs  verify.rs  verify_signature.rs  watch.rs
libs/auth-rs/src/: async_card.rs  card_command.rs  card_details.rs  card_reader.rs  certs.rs  command_apdu.rs  hex_debug.rs  java_card.rs  lib.rs  tlv.rs  vx_card.rs  watcher.rs
libs/ballot-encoder-rs/: Cargo.toml  package.json
libs/ballot-encoder-rs/src/: consts.rs  decode.rs  encode.rs  lib.rs  types.rs  util.rs
libs/ballot-encoder-rs/tests/: encoding.rs
libs/cacvote-server-client/: Cargo.toml
libs/cacvote-server-client/src/: client.rs  lib.rs  result.rs  signer.rs
libs/central-scanner/: Cargo.toml  package.json
libs/central-scanner/src/: fujitsu.rs  lib.rs
libs/electionguard/: .eslintignore  Cargo.toml  index.d.ts  index.js  index.test.ts  jest.config.js  napi.d.ts  package.json  tsconfig.json  types.d.ts
libs/electionguard-rs/: Cargo.toml
libs/electionguard-rs/src/: ballot.rs  command.rs  config.rs  constants.rs  lib.rs  manifest.rs  mixnet.rs  tally.rs  zip.rs
libs/electionguard/src/: lib.rs
libs/tlv-derive/: Cargo.toml  README.md
libs/tlv-derive/src/: lib.rs
libs/tlv-derive/tests/: integration_tests.proptest-regressions  integration_tests.rs
libs/types-rs/: Cargo.toml  package.json
libs/types-rs/src/: auth.rs  ballot_card.rs  election.rs  geometry.rs  lib.rs  scan.rs  votes.rs
libs/ui-rs/: Cargo.toml  package.json
libs/ui-rs/src/: button.rs  date_or_datetime_cell.rs  file_button.rs  lib.rs  table_cell.rs
services/rave-server/: .env  .gitignore  Cargo.toml  Makefile  Rocket.toml  package.json  tailwind.config.js
services/rave-server/.sqlx/: query-0a1e5f85890d35690d62ce0bd9b4a6c58fdd002d50531c119d46a920491e3827.json  query-1166fa780d90967db6362468c31a58ee5a2f9b869c5122be4bfa98100fa8da9e.json  query-1ad99291100c5835132b78d0299b95f6055b6ad49f95c746bc268d4be50515da.json  query-23bf425b14afd269297f7fec0340a01e15d03dd8df7bcdc9772999beb2bbb8bd.json  query-27002098140387da834f0454cd3d85228043228000d35680b0a2594f075980f5.json  query-3548e96944f55ebcba37b8e7ec9ce7fcc7da3214562a130aab92c688893e13f1.json  query-41a2ba726f24136aa7905660b200c9f3752f4ad6c791a8f0d20d21bb94411cf1.json  query-4da37d9febc69ce401de6664a86a8959d85dfd6b59b32d41ca825f69f0de6d91.json  query-50da92ccb116b20ad4371ad8daa870507ce4e2c07d789f3090d264cef0bbb800.json  query-51ede0fd1b6f6514d3aece77258ddf77ac0307e0802d38d01c32685063147088.json  query-609eeaa3902021ec364a7c0af101ebe6419fe43e7c56a82128ee55ed29bc0cf6.json  query-62600d6a375f2e212459a01a7044b3bb09a21880d33e1f89f4205ca10b623404.json  query-67684dc852bf3c5313916385f6aecb89117a92ad9841709ff0643ffc64ccf867.json  query-6bfb0cd57778161225fb08a5aae32ecbd93d96ad54685d0c4737df3258a5692d.json  query-6d5f4f593736ac58b71a6b492b9dd8b97aedba38f707d9a2552ec0ea055d119a.json  query-77c583ca83f68a91e7ba536df8665dbe785a97c9dcd8107a5a75a90aec57c889.json  query-78b992e6d2f51d7eb96191b53172fc9bcd53e06cc70d84284625187c94d011ff.json  query-8c0929b010ff6dcd3b56635f15a27ce9124483a96e9237c2f49dd2a7e52b3474.json  query-9045ba35964754a9144f988c6bc4a7dae2ba74c2466cf98f4f8942e85fbeae62.json  query-9bd37a8ad15e621157a5899580f5486643767997cab278cf80d0ff68a9632c20.json  query-a721d3d9e7500562a5c4dea6f4f46170ca116ab80e8df4f5d3961723aee17c84.json  query-bc48af17fc906f194c3c452a5191c364a917d7844e40b206bf7836f716544740.json  query-bf9da7365ddb974c310ebbf68ce1b1ba94af63a17090f8f613558f0c8b9f4c2d.json  query-c2c64ff498de789ab1ec0f5f4b2cd4d2f8b6682d6c0fbe321ccb9346fcc7301d.json  query-c72d6ec45e4ebc48188aee36c4e964fd5858a2fa2649c656d5025e4de6c866ae.json  query-ccfb34dc0b1e0835b59eb39973b9d76d9edd5438a10b74ad58b941126ab9efe2.json  query-d9d643718503989d188c6c78e4fe4129fbba214f4cfb4001eb19edfc4ab7c2ce.json  query-eeb4655745c38eb2ec628d308c18928c630eae821be84156ef1e89d557385751.json  query-f55f83a4d9d8faa471bd3c6f9cb40c2f3d81e6158d7abe32c38f3e86a1347eff.json  query-fd5bbe94ae688cbba67694013649ea3160d5e13c6c23bbbfdc7f3f32668b225f.json
services/rave-server/script/: ci  db-setup.sh
services/rave-server/src/: app.rs  client.rs  config.rs  cvr.rs  db.rs  log.rs  main.rs  routes.rs  usability_testing.rs
services/rave-server/static/: output.css
(+956 files in other folders)
