[workspace]
resolver = "2"
members = [
    "apps/cacvote-jx-terminal/backend",
    "apps/cacvote-jx-terminal/frontend",
    "libs/auth-rs",
    "libs/logging",
    "libs/types-rs",
    "libs/ui-rs",
    "services/cacvote-server",
]

[workspace.dependencies]
async-stream = "0.3.5"
auth-rs = { path = "libs/auth-rs" }
axum = { version = "0.6.20" }
base64 = "0.21.4"
base64-serde = "0.7.0"
bitstream-io = "1.7.0"
bitter = "0.6.1"
cacvote-server = { path = "services/cacvote-server" }
clap = { version = "4.3.23", features = ["cargo", "derive", "env"] }
color-eyre = "0.6.2"
crc16 = "0.4.0"
ctrlc = "3.4.2"
dioxus = { version = "0.4" }
dioxus-logger = "0.4.1"
dioxus-router = "0.4.1"
dioxus-web = { version = "0.4" }
dotenvy = "0.15.7"
env_logger = "0.10.0"
futures = "0.3.28"
futures-core = "0.3.28"
hex = "0.4.3"
hmac-sha256 = "1.1.7"
image = { version = "0.24.6", default-features = false, features = ["jpeg"] }
imageproc = "0.23.0"
itertools = "0.10.5"
vx-logging = { path = "libs/logging" }
js-sys = "0.3.64"
lazy_static = "1.4.0"
log = "0.4.19"
logging_timer = "1.1.0"
mockall = "0.12.1"
nanoid = "0.4.0"
neon = { version = "0.10", default-features = false, features = ["napi-6"] }
num_enum = "0.7.1"
openssl = "0.10.56"
pcsc = "2.8.0"
pretty_assertions = "1.4.0"
pretty_env_logger = "0.4.0"
proptest = "1.2.0"
rayon = "1.7.0"
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["json"] }
rusttype = "0.9.3"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
serialport = "4.2.2"
sha256 = "1.2.2"
tempfile = "3.3.0"
thiserror = "1.0.50"
time = { version = "0.3.22", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.29.1", default-features = false, features = [
    "sync",
    "macros",
] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower-http = { version = "0.4.3", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
types-rs = { path = "libs/types-rs" }
ui-rs = { path = "libs/ui-rs" }
uinput = "0.1.3"
url = "2.5.0"
uuid = { version = "1.4.0", features = ["serde", "v4", "js"] }
walkdir = "2.5.0"
zip = "0.6.6"

[workspace.dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [
    "macros",
    "migrate",
    "postgres",
    "time",
    "uuid",
    "json",
    "runtime-tokio-rustls",
]
