[package]
name = "auth-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = { workspace = true }
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
futures-core = { workspace = true }
openssl = { workspace = true }
pcsc = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
types-rs = { workspace = true }
uuid = { workspace = true }
