[package]
name = "ballot-encoder-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitstream-io = "1.7.0"
color-eyre = "0.6.2"
hex = "0.4.3"
nanoid = "0.4.0"
types-rs = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
