[package]
name = "cacvote-server-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { workspace = true }
base64-serde = { workspace = true }
color-eyre = { workspace = true }
clap = { workspace = true }
openssl = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
types-rs = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
