[package]
name = "central-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
env_logger = "0.10.0"
log = "0.4.19"
serde = { version = "1.0.175", features = ["derive"] }
tokio = "1.29.1"
