[package]
name = "electionguard-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
tempfile = { workspace = true }
tracing = { workspace = true }
types-rs = { workspace = true }
zip = { workspace = true }
