[package]
name = "tlv-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.36"
syn = "2.0.63"
tlv = { path = "../tlv" }

[dev-dependencies]
proptest = "1.4.0"
