[package]
name = "ui-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { workspace = true }
dioxus = { workspace = true }
dioxus-logger = { workspace = true }
dioxus-web = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
log = "0.4.19"
wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.64", features = ["EventSource"] }
