[package]
name = "rave-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.9.0"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_db_pools = { version = "=0.1.0-rc.3", features = ["sqlx_postgres"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
time = { version = "0.3.22", features = ["serde"] }
uuid = { version = "1.4.0", features = ["serde", "v4"] }

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = ["macros", "offline", "migrate", "postgres", "time", "uuid", "json"]
