[package]
name = "rave-server"
version = "0.1.0"
edition = "2021"
default-run = "rave-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
base64 = { workspace = true }
base64-serde = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
types-rs = { workspace = true, features = ["sqlx"] }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
