[package]
name = "nprint"
version = "0.1.0"
edition = "2021"

[package.metadata]
ci = { enabled = false }

[dependencies]
anyhow = { workspace = true }
futures-lite = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
