[package]
name = "cacvote-scan-frontend"
version = "0.1.0"
authors = ["VotingWorks Eng <eng@voting.works>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4"
dioxus-web = "0.4"

log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
types-rs = { workspace = true }
ui-rs = { workspace = true }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["EventSource"] }
