[package]
name = "cacvote-server"
version = "0.1.0"
edition = "2021"
default-run = "cacvote-server"

[lib]
name = "cacvote_server"
path = "src/lib.rs"

[[bin]]
name = "cacvote-server"
path = "bin/cacvote-server.rs"

[[bin]]
name = "cacvote-client"
path = "bin/cacvote-client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth-rs = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
base64-serde = { workspace = true }
cacvote-server-client = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
dotenvy = { workspace = true }
openssl = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tlv = { workspace = true }
tlv-derive = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
types-rs = { workspace = true, features = ["backend"] }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
