[package]
name = "central-scan-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ballot-encoder-rs = { workspace = true }
base64 = "0.21.2"
central-scanner = { workspace = true }
color-eyre = "0.6.2"
env_logger = "0.10.0"
image = "0.24.6"
lazy_static = "1.4.0"
rayon = "1.7.0"
reqwest = { version = "0.11", features = ["json"] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_db_pools = { version = "=0.1.0-rc.3", features = ["sqlx_postgres"] }
rqrr = "0.6.0"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
time = { version = "0.3.22", features = ["serde"] }
types-rs = { workspace = true }
uuid = { version = "1.4.0", features = ["serde", "v4"] }

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = ["macros", "offline", "migrate", "postgres", "time", "uuid", "json"]
