[package]
name = "rave-jx-terminal-frontend"
version = "0.1.0"
authors = ["VotingWorks Eng <eng@voting.works>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { workspace = true }
chrono = { version = "0.4.26", features = ["serde"] }
chrono-humanize = "0.2.3"
console_error_panic_hook = "0.1.7"
dioxus = { workspace = true }
dioxus-logger = { workspace = true }
dioxus-router = { workspace = true }
dioxus-web = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
log = "0.4.19"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time.workspace = true
types-rs = { workspace = true }
ui-rs = { workspace = true }
wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.64", features = ["EventSource"] }
