[package]
name = "rave-scan-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ballot-encoder-rs = { workspace = true }
base64 = { workspace = true }
central-scanner = { workspace = true }
color-eyre = { workspace = true }
env_logger = { workspace = true }
image = { workspace = true }
lazy_static = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
rocket = { workspace = true }
rocket_db_pools = { workspace = true }
rqrr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
types-rs = { workspace = true, features = ["backend"] }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
