[package]
name = "rave-scan-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = { workspace = true }
axum = { workspace = true }
ballot-encoder-rs = { workspace = true }
base64 = { workspace = true }
central-scanner = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
futures-core = { workspace = true }
image = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
rqrr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
types-rs = { workspace = true, features = ["backend"] }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
